# AsteroidDodge

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build-wasm.sh
docs/: audio_system_refactor.md  development_practices.md  projectile_implementation.md  tutorial_new_controls.md
src/: components.rs  events.rs  main.rs  resources.rs  systems.rs
src/shapes/: mod.rs  polygon.rs
src/systems/: asteroid.rs  background.rs  camera.rs  collision.rs  game_over.rs  health.rs  loading.rs  menu.rs  mod.rs  player.rs  projectile.rs
