[package]
name = "asteroid_dodge"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.4.1"
bevy = {version = "0.17.2", features = ["jpeg", "png", "webgl2", "bevy_winit"]}
bevy_asset = "0.17.2"
bevy_hanabi = "0.17.0"
bevy_mesh = "0.17.2"
rand = "0.9.2"
wgpu-types = "24.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.105"
web-sys = "0.3.82"


[dev-dependencies]
image = "0.24"

# WASM optimizations
[profile.wasm-release]
inherits = "release"
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols
